results/SVCOMP/4-shot/log-AlarmOutputs-2024_03_18_04_25_34.txt
import java.util.Random;

final class Verifier {
    //@ ensures \result != null;
    //@ ensures \result >= Integer.MIN_VALUE && \result <= Integer.MAX_VALUE;
    public static int nondetInt() {
        return new Random().nextInt();
    }
}

public class AlarmOutputs {
    //@ public invariant isAudioDisabled >= Integer.MIN_VALUE && isAudioDisabled <= Integer.MAX_VALUE;
    //@ public invariant notificationMessage >= Integer.MIN_VALUE && notificationMessage <= Integer.MAX_VALUE;
    //@ public invariant audioNotificationCommand >= Integer.MIN_VALUE && audioNotificationCommand <= Integer.MAX_VALUE;
    //@ public invariant highestLevelAlarm >= Integer.MIN_VALUE && highestLevelAlarm <= Integer.MAX_VALUE;
    //@ public invariant logMessageId >= Integer.MIN_VALUE && logMessageId <= Integer.MAX_VALUE;
    public int isAudioDisabled = Verifier.nondetInt();
    public int notificationMessage = Verifier.nondetInt();
    public int audioNotificationCommand = Verifier.nondetInt();
    public int highestLevelAlarm = Verifier.nondetInt();
    public int logMessageId = Verifier.nondetInt();
}
/home/max/Documents/JMLGPT/tmp/AlarmOutputs.java:4: error: bad operand types for binary operator '!='
    //@ ensures \result != null;
                        ^
  first type:  int
  second type: <null>
1 error

